k8s/jenkins-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: jenkins

spec:
  replicas: 1

  selector:
    matchLabels:
      app: jenkins

  template:
    metadata:
      labels:
        app: jenkins

    spec:
      securityContext:
        fsGroup: 1000

      containers:
        - name: jenkins
          image: atultele/jenkins-devops:v1
          imagePullPolicy: Always

          ports:
            - containerPort: 8080
            - containerPort: 50000

          volumeMounts:
            - name: jenkins-home
              mountPath: /var/jenkins_home

          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"

            limits:
              cpu: "1000m"
              memory: "2Gi"

      volumes:
        - name: jenkins-home
          persistentVolumeClaim:
            claimName: jenkins-pvc
